<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profileScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/plain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:orientation="vertical"
        android:padding="16dp">
        <ImageButton
            android:id="@+id/backB"
            android:layout_width="92dp"
            android:layout_height="89dp"
            android:layout_marginLeft="-28dp"
            android:layout_marginTop="-10dp"
            android:backgroundTint="#00FFFFFF"
            android:src="@drawable/new_back_"
            android:textSize="16sp" />

        <!-- Avatar -->

        <!-- User Name -->

        <ImageView
            android:id="@+id/avatarImageView"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:contentDescription="@string/user_avatar"
            android:scaleType="centerCrop"
            android:src="@drawable/default_avatar" />

        <Button
            android:id="@+id/changeAvatarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="6dp"
            android:background="#F9A195"
            android:backgroundTint="#F9A195"
            android:contentDescription="@string/change_avatar"
            android:text="@string/change_avatar"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Bar Chart Title -->
        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="-34dp"
            android:text="@string/username"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/tasks_completed"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:textStyle="bold" />

        <!-- Pie Chart -->
        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:text="@string/tasks_completed"
            android:textColor="#FFFFFF"
            android:layout_margin="16dp" />

        <!-- Line Chart Title -->
        <TextView
            android:id="@+id/timeSpentTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/time_spent"
            android:textColor="#FFFFFF"
            android:textSize="19sp"
            android:textStyle="bold" />

        <!-- Line Chart -->
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="match_parent"
            android:text="@string/tasks_completed"
            android:textColor="#FFFFFF"
            android:layout_height="300dp"
            android:layout_margin="16dp" />

    </LinearLayout>
</ScrollView>
